@@ -15,7 +15,7 @@
     </parent>
 
     <properties>
-        <jlama.version>0.2.1</jlama.version>
+        <jlama.version>0.3.1</jlama.version>
         <jackson.version>2.16.1</jackson.version>
         <spotless.version>2.40.0</spotless.version>
         <maven.compiler.release>21</maven.compiler.release>
@@ -69,13 +69,6 @@
             <artifactId>logback-classic</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.testcontainers</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>${testcontainers.version}</version>
-            <scope>test</scope>
-        </dependency>
-
     </dependencies>
 
     <licenses>
@@ -98,6 +91,28 @@
         <plugins>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <forkCount>1</forkCount>
+                    <argLine>
+                        --add-modules=jdk.incubator.vector
+                        --add-exports java.base/sun.nio.ch=ALL-UNNAMED
+                        --enable-preview
+                        --enable-native-access=ALL-UNNAMED
+                        --add-exports java.base/jdk.internal.vm.vector=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <forkCount>1</forkCount>
                     <argLine>
